src/test/ui/custom-derive/helper-attr-blocked-by-import-ambig.stderr
error[E0659]: `helper` is ambiguous (derive helper attribute vs any other name)
  --> $DIR/helper-attr-blocked-by-import-ambig.rs:9:3
   |
LL | #[helper]
   |   ^^^^^^ ambiguous name
   |
note: `helper` could refer to the derive helper attribute defined here
  --> $DIR/helper-attr-blocked-by-import-ambig.rs:8:10
   |
LL | #[derive(WithHelper)]
   |          ^^^^^^^^^^
note: `helper` could also refer to the attribute macro imported here
  --> $DIR/helper-attr-blocked-by-import-ambig.rs:6:5
   |
LL | use plugin::helper;
   |     ^^^^^^^^^^^^^^
   = help: use `crate::helper` to refer to this attribute macro unambiguously

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
